syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_navigate_to_next_descendant.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Finds the next descendant section at any depth in the hierarchy.
