syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_navigate_to_next_sibling.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Finds the next section at the same hierarchy level.
