syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_navigate_to_parent.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Moves to the containing section in the document hierarchy.
