syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_navigate_to_prev_sibling.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Finds the previous section at the same hierarchy level.
