syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_new.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Initialises application state with parsed sections and determines file mode.
