syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_rebuild_tree.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Rebuild tree after sections change (e.g., after save)
