syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_rewrite_file_sections.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Rewrite an entire file with reordered sections
