syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_save_current.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Save the current section's content to disk.

# Errors

Returns an error if writing to disk fails or if file operations cannot complete.
