syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_save_section_reorder.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Apply section reordering to disk

# Errors

Returns an error if writing to disk fails or if file operations cannot complete.
