syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_sections.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
All parsed sections across loaded files.
