syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_start_move.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Start moving the current section
