syncdoc/tests/roundtrip/snapshots/app_state/roundtrip__helpers__docs_app_state_AppState_tree_nodes.md.snap
---
source: syncdoc/tests/roundtrip/helpers.rs
expression: content
---
Unified tree of directories, files, and sections for display
